# Hexapod

./: CMakeLists.txt  main.cpp
animlib/: CMakeLists.txt  animlib.cmake  frame.h  interp.h  track.cpp  track.h
curvegen/: CMakeLists.txt  bezierinterp.h  curve.h  curvegen.cmake  hermiteinterp.h  interpmethod.h
vecmath/: CMakeLists.txt  constants.h  mat4.cpp  mat4.h  quat.cpp  quat.h  transform.cpp  transform.h  vec2.h  vec3.cpp  vec3.h  vec4.h  vecmath.cmake
